<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaiThuat"
    android:background="@drawable/hh">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cgt"
        android:fontFamily="@font/font"/>

    <RadioGroup
        android:id="@+id/rbGT"
        android:layout_width="match_parent"
        android:layout_height="443dp">

        <RadioButton
            android:id="@+id/selectionSort_ChonGT"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:clickable="true"
            android:fontFamily="@font/font"
            android:focusable="true"
            android:checked="true"
            android:text="@string/ss" />

        <RadioButton
            android:id="@+id/insertSort_ChonGT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font"
            android:text="@string/is" />

        <RadioButton
            android:id="@+id/bubbleSort_ChonGT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font"
            android:text="@string/bs" />

        <RadioButton
            android:id="@+id/interchangeSort_ChonGT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font"
            android:text="@string/ics" />

        <RadioButton
            android:id="@+id/binarySort_ChonGT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font"
            android:text="@string/bis" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:fontFamily="@font/font"
            android:layout_height="42dp"
            android:text="@string/gtnc" />

        <RadioButton
            android:id="@+id/quickSort_ChonGT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font"
            android:text="@string/qs" />

        <RadioButton
            android:id="@+id/heapSort_ChonGT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hs" />

        <RadioButton
            android:id="@+id/flashSort_ChonGT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fs"
            android:fontFamily="@font/font"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnClose_ChonGT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:text="@string/d"
        android:background="@drawable/tuybiennut"/>
</LinearLayout>