<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="10"
    android:background="@drawable/hh">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:text="@string/dscsx"
        android:fontFamily="@font/font"/>

    <EditText
        android:id="@+id/txtDaySo_Main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/font"
        android:inputType="textPersonName"
        android:text=""
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:background="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal"
        android:layout_weight="3">

        <Button
            android:id="@+id/btnNhap_Main"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/font"
            android:text="@string/nds"
            android:background="@drawable/tuybiennut"
            android:padding="5dp"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btnKQ_Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/sx"
            android:fontFamily="@font/font"
            android:background="@drawable/tuybiennut"
            android:padding="5dp"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnChon_Main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cgt"
        android:fontFamily="@font/font"
        android:background="@drawable/tuybiennut"
        android:padding="5dp"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/btnClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/d"
        android:fontFamily="@font/font"
        android:background="@drawable/tuybiennut"
        android:padding="5dp"
        android:layout_margin="10dp"/>





</LinearLayout>