<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".KetQua"
    android:background="@drawable/hh">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:fontFamily="@font/font"
        android:text="@string/dsstgt" />

    <EditText
        android:id="@+id/txtTenGT_KetQua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily="@font/font"
        android:text="" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily="@font/font"
        android:text="@string/kqss" />

    <EditText
        android:id="@+id/txtKetQua_KetQua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily="@font/font"
        android:text=""
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnClose_KetQua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:text="@string/dy"
        android:background="@drawable/tuybiennut"/>
</LinearLayout>